/* MARK: - Onboarding */
"lastButtonTitle" = "Done";
"skipButtonTitle" = "Skip";
"primaryButtonTitle" = "Continue";
"actionButtonlastSlideAccessibilityHint" = "Finish onboarding";
"actionButtonAccessibilityHint" = "Go to the next slide";
"skipButtonAcessibilityHint" = "Skip onboarding";
