...
                withAnimation {
                    viewModel.didShow(index: newValue)
                }
            }
        )
        .tabViewStyle(.page(indexDisplayMode: .never))
        .accessibilityIdentifier("container.tabview")
    }

    @ViewBuilder
    private var buttonStack: some View {
        let layout = verticalSizeClass == .compact ?
        AnyLayout(HStackLayout()) :
...
